--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,6 @@ body{
 /*Titulo Logo*/
 .container-title{ 
     background-color: #202f40;
-    justify-content: center;
     display: flex;
     flex-flow: row wrap;
     height: 100px;
@@ -20,6 +19,7 @@ body{
     z-index: 1000;
 }
 .container-logo{
+    text-align: left;
     width: 100%;
     height: 100%;
 }
@@ -69,7 +69,14 @@ body{
     top: 150px;
     position: absolute;
     z-index:1;
-
+}
+.filtrar{
+    display: block;
+    background-color: purple;
+    padding: 40px;
+    top: 270px;
+    position: absolute;
+    z-index:1;
 }
 
 /*colores*/
