--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,135 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
-}/*
+    box-sizing: border-box;
+}
+
+header {
+    background-color: rgb(0, 0, 0);
+    height: 20vh;
+    width: 100vw;
+    color: white;
+    font-size: 6em;
+    font-family: 'roboto';
+    position: relative;
+   
+}
+ 
+.img1{
+    display: inline-block;
+    margin: auto;
+     
+}
+.img1 img{
+    margin: auto;
+    width:1.8em;
+    height: 2em;
+    
+    
+    
+    
+   
+}
+.img1::after .img1::before{
+    content: '';
+    width: 50%;
+    position: absolute;
+    margin: auto;
+    width: 45%;
+    top: 45%;
+    background-color: rgb(85, 233, 16);
+
+
+} 
+
+
+
+img{
+    width: 100%;
+    height: 1em;
+    
+    
+}
+
+
+
+ 
+
+
+
+
+
+
+main {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-image: linear-gradient(rgba(5, 7, 12, .5), rgba(5, 7, 12, .5)),
+     url(./img/back.png );
+    font-family: 'Roboto',sans-serif;
+
+}
+
+#insertPoster {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    width: 90%;
+    height: 100%;
+    margin: auto;
+    outline: 2px solid blue;
+}
+
+
+.imgPoster {
+
+    width: 15em;
+    height: 28em;
+    margin: 50px;
+    position: relative;
+    border-radius: 4%;
+    display: flex;
+    box-shadow: 0px 0px 15px 8px rgb(82, 76, 76);
+    
+
+}
+
+
+img {
+    width: 15em;
+    height: 24em;
+    border-radius: 4% 4% 0% 0%;
+
+
+}
+
+.imgPoster:hover {
+   
+    bottom: 20px;
+    
+    box-shadow: 0px 0px 25px 15px rgb(119, 112, 133);
+    transition: .5s;
+
+}
+
+figcaption {
+    position: absolute;
+    bottom: .8em;
+    text-align: center;
+    color: rgb(235, 235, 235);
+    font-size: 1.2em;
+    width: 80%; 
+    margin-top: 0.8em; 
+    margin-left: 1.3em;
+    margin-right: 3em;
+}  
+
+
+
+
+
+/*
 .container1{
   padding: 100px;
 
@@ -25,9 +153,9 @@ img{
 
 }*/
 
-body{
+/*body{
      background-color: rgb(87, 86, 86);
-}
+}*/
 /*h1{
     
     position: relative;
@@ -59,8 +187,8 @@ h1::after{
 }*/
 
 /*---------------------*/
- 
-header{
+
+/*header{
     background-color: rgb(0, 0, 0);
     height: 20vh;
     width: 100%;
@@ -71,75 +199,6 @@ header{
    
     
 }
-.line{
-   position: absolute; 
-   width: 100%;
-   top: 0px;
-   bottom: 0px;
-   left: 0px;
-   right: 0px;
-   margin: auto;
-    
-   
-}
-.line::after, .line::before{
-    content: '';
-    position:absolute;
-    height: 1px;
-    background-color: rgb(253, 255, 251);
-    width: 38%;
-    top: 50%;
-     
-     
-}
-.line::after{
-    left:20px;
-     
 
-}
-.line::before{
-    
-    right: 20px;
-}
-
-
-.imag0 img {
-
-    max-width: 250px;
-    max-height: 250px;
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: -60px;
-    bottom: 0px;
-    margin: auto;
-     
-}
-.title {
-    border: 1px solid red;
-     
-    color: white;
-    display: inline;
-    
-    left: 20%;
-    right: 20%;
-    top:50%;
-    bottom: 0px;
-     
-}
-#insertPoster{
-    background-color: brown;
-}
-img{
-    width: 100px;
-    height: 200px;
-    padding: 2px;
-
-}
- 
-
- 
     
  
-
-
