--- a/src/style.css
+++ b/src/style.css
@@ -117,7 +117,7 @@ section{
     overflow: hidden;
     margin: 1.5%;
     flex: auto;
-    max-height: 400px;
+    max-height: 460px;
     max-width: 200px;
 }
 
@@ -134,23 +134,36 @@ section{
 
 .card-body-text {
     display: flex;
-    height: 100px;
+    height: 160px;
     width: 100%;
     flex-direction: column;
 }
 
 .card-title {
-    font-size: 16px;
+    font-size: 17px;
     margin: 5px;
 }
 
 .card-body-text span {
+    font-size: 14px;
     margin-left: 5px;
 }
 
-a{
+.button{
     display: absolute;
-    z-index: 100;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: auto;
+    border-radius: 4px;
+    border: 0;
+    width: 130px;
+    margin-left: auto;
+    margin-right: auto;
+    transition: background-color .1s;
+}
+
+.button:hover {
+    background-color: rgb(204, 204, 204);
 }
 
 /* Borde de la Pagina */
