--- a/src/style.css
+++ b/src/style.css
@@ -150,7 +150,7 @@ section{
     margin-left: 5px;
 }
 
-.button{
+.button-info{
     display: absolute;
     text-align: center;
     margin-bottom: 10px;
@@ -163,7 +163,7 @@ section{
     transition: background-color .1s;
 }
 
-.button:hover {
+.button-info:hover {
     background-color: rgb(204, 204, 204);
 }
 
