--- a/src/style.css
+++ b/src/style.css
@@ -102,6 +102,7 @@ body{
     width: 120px;
     background-color: #3ab54aae;
     color: #fff;
+    cursor: pointer;
 }
 
  
@@ -186,6 +187,76 @@ body{
     padding-top: 100px;
 }
 
+
+/* --------------------- modal ------------------------------- */
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #111111bd;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .6s;
+}
+
+.modal--show {
+    opacity: 1;
+    pointer-events: unset;
+    transition: opacity .6s;
+}
+
+.modal_container{
+    width: 90%;
+    height: 90%;
+    margin: auto;
+    max-width: 1000px;
+    max-height: 700px;
+    background-color: #fff;
+    border-radius: 6px;
+    padding: 3em 2.5em;
+    display: grid;
+    gap: 1em;
+    place-items: center;
+    grid-auto-columns: 100%;
+}
+.box-statis{
+  
+    width: 100%;
+    max-width: 400px;
+    display: block;
+    margin: 0 auto;
+    padding: 30px;
+    background-color:rgb(0, 255, 145);
+
+}
+
+.modal_title{
+    font-size: 3rem;
+}
+
+.modal_close{
+
+    text-decoration: none;
+    color: #ffff;
+    background-color: #3ab54aae;
+    padding: 1em 3em;
+    border: 1px solid;
+    border-radius: 6px;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: bold;
+    transition: background-color .3s;
+}
+
+.modal_close:hover {
+    color: black;
+    background-color:#ffff;
+}
+
  /* --------------------- footer ------------------------------- */
 
  
@@ -236,4 +307,38 @@ body{
       max-width: 400px;
     }
 }
+
+
+@media ( min-width:1900px) {
+
+    .container {
+        max-width: 2000px;
+    }
+
+    .select {
+        width: 150px;
+        height: 40px;
+        font-size: 18px;
+    }
+
+    .content {
+        max-width: 1500px;
+        margin: 0 auto;
+    }
+
+    .container-cards{
+        gap: 60px;
+    }
+    .cards-front, .cards-reverse{
+        width: 300px;
+        height: 350px;
+    }
+
+    .text-name-r , .text1 {
+        font-size: 2.5rem;
+        padding: 2px;
+    }
+
+}
+
     
