--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,26 @@ body{
     margin: 0 auto;
     padding: 30px;
 }
+ 
+/* creando modal */
+
+
+
+
+
+
+.box-statis{
+    width: 100%;
+    max-width: 400px;
+    display: block;
+    margin: 0 auto;
+    /* padding: 130px 30px 30px 30px; */
+    background-color:rgb(0, 255, 145);
+    height: 350px;
+    border-radius: 9px;
+}
+
+/* ----------------------------------------- */
 
 .content-select-all{
     margin: 0 auto;
@@ -97,8 +117,8 @@ body{
 }
 
 .select{
-    border-radius: 13px;
-    padding: 5px;
+    border-radius: 15px;
+    padding: 8px;
     width: 120px;
     background-color: #3ab54aae;
     color: #fff;
@@ -186,9 +206,81 @@ body{
     padding-top: 100px;
 }
 
- /* --------------------- footer ------------------------------- */
+ /* --------------------- modal------------------------------- */
 
- 
+ .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #111111bd;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .6s;
+}
+
+.modal--show {
+    opacity: 1;
+    pointer-events: unset;
+    transition: opacity .6s;
+}
+
+.modal_container{
+    width: 90%;
+    height: 90%;
+    margin: auto;
+    max-width: 1000px;
+    max-height: 700px;
+    background-color: #fff;
+    
+    border-radius: 6px;
+    padding: 3em 2.5em;
+    display: grid;
+    gap: 1em;
+    place-items: center;
+    grid-auto-columns: 100%;
+}
+.box-statis{
+    width: 500px;
+    max-width: 600px;
+    display: block;
+    margin: 0 auto;
+    padding: 50px 50px 350px 50px;
+    background-color:rgb(0, 255, 145);
+}
+
+.modal_title{
+    font-size: 3rem;
+}
+
+.modal_close{
+
+    text-decoration: none;
+    color: #000;
+    background-color: orange;
+    padding: 1em 3em;
+    border-radius: 6px;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: bold;
+    transition: background-color .3s;
+}
+
+.modal_close:hover {
+    color: black;
+    background-color:rgba(255, 166, 0, 0.533);
+}
+
+/* .piechart_3d{
+    width:400px; 
+    height: 250px;
+}  */
+
+
+/* --------------------- footer------------------------------- */
+
 .footer{
     position: absolute;
     bottom: 0;
@@ -237,3 +329,11 @@ body{
     }
 }
     
+
+.text-box{
+    font-size: 1.2rem;
+    text-align: center;
+    margin-top: 5px;
+    color: #000;
+    font-weight: bold;
+}
