--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./extra/image.png");
+  background-image: url("./extra/fondoOscuro.png");
   width: 100%;
   height: auto;
   background-repeat: no-repeat;
@@ -8,6 +8,8 @@ body {
 }
 
 #menu {
+  display: flex;
+  flex-wrap: wrap;
   box-shadow: 0px 10px 14px -7px #a1a3e1;
   background: linear-gradient(to bottom, #0927ec 5%, #030b47 100%);
   background-color: #04239f;
@@ -31,8 +33,8 @@ body {
 #buttonHome,
 #buttonPokedex,
 #buttonExtra {
+  display: flex;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   box-shadow: 3px 4px 0px 0px #899599;
   background: linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
   background-color: #ededed;
@@ -41,7 +43,6 @@ body {
   display: inline-block;
   cursor: pointer;
   color: #121db6;
-  font-family: Arial;
   font-size: 90%;
   padding: 7px 25px;
   text-decoration: none;
@@ -71,8 +72,7 @@ body {
 }
 
 #welcome {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   display: flex;
   flex-wrap: wrap;
   width: auto;
@@ -96,7 +96,7 @@ body {
 }
 
 .pokemon-container {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   padding: 5%;
   display: flex;
   display: inline-block;
@@ -108,12 +108,16 @@ body {
 }
 
 h3 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
   font-size: x-large;
   background-color: rgba(200, 196, 196, 0.899);
+  margin-left: 2%;
+  margin-right: 3%;
 }
 
 #pokemons {
+  
   margin-left: 15%;
   display: flex;
   flex-wrap: wrap;
@@ -127,7 +131,7 @@ h3 {
   width: 15%;
   cursor: pointer;
   padding: 7px 15px;
-  height: 42px;
+  height: 30%;
   outline: 0;
   border: 0;
   border-radius: 0;
@@ -142,6 +146,12 @@ h3 {
   position: center;
   transition: all 0.25s ease;
 }
+
+#filterType{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 
 #typeNormal,
 #typeFighting,
@@ -161,9 +171,12 @@ h3 {
 #typeDragon,
 #typeDark,
 #typeFairy {
+  display: flex;
   width: 4%;
   background-color: rgba(200, 196, 196, 0.871);
   border-radius: 10px;
+  margin: 0.5%;
+  margin-bottom: 1%;
 }
 
 #typeNormal:active,
@@ -189,18 +202,13 @@ h3 {
   top: 5px;
 }
 
-.type-normal::before {
-  background-color: #04239f;
-  content: "Normal";
-  padding: 0 5em;
-  border-radius: 8xp;
-  font-size: 0.9em;
-}
 
 #allTypes {
   width: 4.6%;
   background-color: rgba(200, 196, 196, 0.871);
   border-radius: 10px;
+  margin: 0.5%;
+  margin-bottom: 1%;
 }
 
 footer {
@@ -220,20 +228,8 @@ footer {
   display: none;
 }
 
-.contenedor-principal {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  height: 30vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
 #pokePeso{
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   padding: 5%;
   display: flex;
   display: inline-block;
@@ -258,9 +254,80 @@ main {
     margin-right: 2%;
     margin-top: 2%;
   }
+  #filterType{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  
+  #typeNormal,
+  #typeFighting,
+  #typeFlying,
+  #typePoison,
+  #typeGround,
+  #typeRock,
+  #typeBug,
+  #typeGhost,
+  #typeSteel,
+  #typeFire,
+  #typeWater,
+  #typeGrass,
+  #typeElectric,
+  #typePsychic,
+  #typeIce,
+  #typeDragon,
+  #typeDark,
+  #typeFairy {
+    display: flex;
+    width: 4%;
+    background-color: rgba(200, 196, 196, 0.871);
+    border-radius: 10px;
+    margin: 0.5%;
+    margin-bottom: 1%;
+  }
 }
-/*
-  @media only screen and (min-width: 768px) {
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
+  .pokemon-container {
+    width: 30%;
+    margin-right: 2%;
+    margin-top: 2%;
+  }
+  #filterType{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  #typeNormal,
+  #typeFighting,
+  #typeFlying,
+  #typePoison,
+  #typeGround,
+  #typeRock,
+  #typeBug,
+  #typeGhost,
+  #typeSteel,
+  #typeFire,
+  #typeWater,
+  #typeGrass,
+  #typeElectric,
+  #typePsychic,
+  #typeIce,
+  #typeDragon,
+  #typeDark,
+  #typeFairy {
+    display: flex;
+    width: 4%;
+    background-color: rgba(200, 196, 196, 0.871);
+    border-radius: 10px;
+    margin: 0.5%;
+    margin-bottom: 1%;
+  }
+}
+
+
+ /* @media only screen and (min-width: 768px) {
 	#pokemons{
 		display: flex;
 		flex-wrap: wrap;
@@ -279,6 +346,7 @@ main {
 	}
   }*/
 
+  /*
 @media only screen and (max-width: 768px) {
   #buttonHome,
   #buttonPokedex, 
