Function general filter, limited characters

--- a/src/style.css
+++ b/src/style.css
@@ -81,10 +81,11 @@ body{
 
 .logo{
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
     display: block;
     margin: 0 auto;
     padding: 30px;
+    margin-top: 20px;
 }
  
 /* creando modal */
@@ -114,6 +115,24 @@ body{
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+    margin-top: 10px;
+}
+
+.group-select{
+   
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-left: 20px;
+   gap: 10px;
+}
+
+.label{
+    color: white;
+    width: 60px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    
 }
 
 .select{
@@ -137,6 +156,17 @@ body{
 
 .container-cards{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 35px;
+    padding: 10px;
+    
+}
+
+.characters{
+    /* display: flex; */
+    display: none;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -224,7 +254,7 @@ body{
 .modal--show {
     opacity: 1;
     pointer-events: unset;
-    transition: opacity .6s;
+    transition: opacity .3s;
 }
 
 .modal_container{
@@ -336,4 +366,53 @@ body{
     margin-top: 5px;
     color: #000;
     font-weight: bold;
+}
+
+@media ( min-width:1900px) {
+
+    .items{
+        font-size: 2.5rem;
+        font-weight: bold;
+        
+    }
+
+    .container {
+        max-width: 2000px;
+    }
+    .logo{
+        margin-top: 50px;
+    }
+    .content-select-all{
+        margin-top: 50px;
+    }
+    .label{
+        font-size: 2rem;
+        width: 80px;
+    }
+    .select {
+        width: 150px;
+        height: 40px;
+        font-size: 18px;
+    }
+
+    .content {
+        max-width: 1500px;
+        margin: 0 auto;
+    }
+
+    .container-cards{
+        gap: 60px;
+        margin-top: 80px;
+    }
+
+    .cards-front, .cards-reverse{
+        width: 300px;
+        height: 350px;
+    }
+
+    .text-name-r , .text1 {
+        font-size: 2.5rem;
+        padding: 2px;
+    }
+
 }
