--- a/src/style.css
+++ b/src/style.css
@@ -6,65 +6,84 @@
 
 body {
     width: 100%;
+    text-align: center;
 }
 
 header {
     background-color: rgb(0, 0, 0);
-    height: 250px;
+    height: 300px;
     width: 100%;
     color: white;
-    font-size: 6em;
+    font-size:6em;
     font-family: 'roboto';
     position: relative;
-
-
+    background-image: linear-gradient(rgba(5, 7, 12, .5), rgba(5, 7, 12, .5)),
+    url(./img/back.png );
 }
-
-.img1 {
-
+ 
+ 
+ span{
+    font-size:.7em;
     margin: auto;
-    background-color: red;
-    outline: 2px solid yellow;
-    display: inline-block;
-    margin: auto;
-
-
-
-
-}
-
-.img1 img {
-
-    width: 1.8em;
-    height: 2em;
-
-
-
-
-
-}
-
-.img1::after .img1::before {
-    content: '';
-    width: 50%;
+    bottom: 35px;
     position: absolute;
+    color: rgb(241, 241, 241);
+     
+}
+.studios{
+    left: 150px;
+
+
+  /*margin-left: 30px;
+   margin-right: 250px;*/
+ 
+    
+}
+.ghibli{
+    right: 150px;
+    /*margin-right: 30px;
+    margin-left: 250px;*/
+
+}  
+
+
+
+ 
+
+.img1{
+    position: relative;
+     
+    width: 2em;
+    height: 2.7em;
+    display: inline-block;
+
+}
+.img1 img{
+    width: 2em;
+    height: 2.7em;
+}
+ 
+  
+ 
+.img1::before,.img1::after{
+
+    content: '';
+    position: absolute;
+    width: 900px;
+    height: 2px;
     margin: auto;
-    width: 45%;
-    top: 45%;
-    background-color: rgb(85, 233, 16);
+    background-color: rgb(172, 172, 172);
+    top: 1.5em;
+    box-shadow: 0px 8px 40px 4px rgb(192, 190, 190);
 
-
+    
 }
-
-
-
-img {
-    width: 100%;
-    height: 1em;
-
-
+.img1::before{
+    left: 140px;
 }
-
+.img1::after{
+    right:140px;
+}
 
 
 
