--- a/src/style.css
+++ b/src/style.css
@@ -20,10 +20,9 @@ body {
   cursor: pointer;
   color: #ffffff;
   font-family: Arial;
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: bold;
   padding: 13px 32px;
-  text-decoration: none;
   text-shadow: 0px 1px 0px #1117ca;
   width: 90%;
   text-align: center;
@@ -35,6 +34,7 @@ body {
 #buttonExtra {
   display: flex;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 2rem;
   box-shadow: 3px 4px 0px 0px #899599;
   background: linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
   background-color: #ededed;
@@ -200,6 +200,8 @@ h3 {
 #allTypes:active {
   position: relative;
   top: 5px;
+  transform: scale(2)
+
 }
 
 
@@ -248,6 +250,7 @@ main {
   margin-bottom: 5%;
 }
 
+/*Media Query achicar pantalla*/
 @media screen and (max-width: 768px) {
   .pokemon-container {
     width: 30%;
@@ -259,7 +262,6 @@ main {
     flex-wrap: wrap;
   }
   
-  
   #typeNormal,
   #typeFighting,
   #typeFlying,
@@ -279,20 +281,52 @@ main {
   #typeDark,
   #typeFairy {
     display: flex;
-    width: 4%;
-    background-color: rgba(200, 196, 196, 0.871);
+    width: 9%;
     border-radius: 10px;
     margin: 0.5%;
     margin-bottom: 1%;
   }
+  #allTypes {
+    width: 10%;
+    border-radius: 10px;
+    margin: 0.5%;
+    margin-bottom: 1%;
+  }
+  #buttonHome,
+  #buttonPokedex,
+  #buttonExtra {
+    display: flex;
+    display: inline-block;
+    font-size: 2rem;
+    text-align: center;
+    margin-left: 3%;
+    width: 26%;
+  }
+  #order-select {
+    display: inline-block;
+    width: 30%;
+    padding: 7px 15px;
+    height: 40%;
+    outline: 0;
+    border: 0;
+    border-radius: 0;
+    margin-left: 33%;
+    margin-top: 3%;
+    font-size: 2em;
+    border-radius: 12px;
+    position: center;
+  }
 }
 
+/*Media Query Celular*/
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px){
   .pokemon-container {
     width: 30%;
     margin-right: 2%;
     margin-top: 2%;
+    padding: 5%;
+    font-size: 2rem;
   }
   #filterType{
     display: flex;
@@ -318,45 +352,52 @@ main {
   #typeDark,
   #typeFairy {
     display: flex;
-    width: 4%;
-    background-color: rgba(200, 196, 196, 0.871);
+    width: 9%;
+    border-radius: 10px;
+    margin: 0.5%;
+    margin-bottom: 1%;
+    margin-right: 5;
+  }
+  #allTypes {
+    width: 10%;
     border-radius: 10px;
     margin: 0.5%;
     margin-bottom: 1%;
   }
-}
-
-
- /* @media only screen and (min-width: 768px) {
-	#pokemons{
-		display: flex;
-		flex-wrap: wrap;
-	}
-	.pokemon-container {
-		width: 16%;
-	}
-  }
-  @media only screen and  (min-width: 300px) , only screen and (max-width: 500px){
-	#pokemons{
-		display: flex;
-		flex-wrap: wrap;
-	}
-	.pokemon-container {
-		width: 100%;
-	}
-  }*/
-
-  /*
-@media only screen and (max-width: 768px) {
-  #buttonHome,
-  #buttonPokedex, 
-  #buttonExtra {
+  #menu {
     display: flex;
     flex-wrap: wrap;
-    font-size: 50%;
-    padding: 1% 3%;
+    border-radius: 8px;
+    display: inline-block;
+    width: 80%;
+    height: 40%;
   }
+  #buttonHome,
+  #buttonPokedex,
+  #buttonExtra {
+    display: flex;
+    display: inline-block;
+    font-size: 2rem;
+    text-align: center;
+    margin-left: 3%;
+    width: 26%;
+  }
+  #order-select {
+    display: inline-block;
+    width: 30%;
+    padding: 7px 15px;
+    height: 40%;
+    outline: 0;
+    border: 0;
+    border-radius: 0;
+    margin-left: 33%;
+    margin-top: 3%;
+    font-size: 2em;
+    border-radius: 12px;
+    position: center;
+  }
+
+
 }
 
-@media only screen and (max-width: 600px) {
-}
+
