--- a/src/style.css
+++ b/src/style.css
@@ -4,45 +4,73 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url(https://c8.alamy.com/compes/2eww0mr/lineas-diagonales-patron-de-fondo-fondo-blanco-con-lineas-diagonales-grises-vector-eps-10-2eww0mr.jpg); /*imagen de fondo*/
+    background-color: #271d45; 
 }
 
 /*Titulo Logo*/
 .container-title{ 
-    background-color: #202f40;
+    background-color:#45337b;
     display: flex;
-    height: 60px;
+    height: 40px;
     width: 100%;
-    position:sticky;
+    position:fixed;
     top: 0px;
     z-index: 1000;
-}
-.container-logo{
-    text-align: left;
-    width: 100%;
-    height: 100%;
     flex-flow: row wrap;
-    justify-content: flex-end;
+    justify-content:space-between;
+
+}
+.container-title nav{
+    width: 400px;
+    height: 40px;
+    background-color: aqua;
+}
+.nav-list{
+    list-style: none;
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    
+}
+.nav-list li{
+    margin: 8px; 
+    padding: 8px;
+    background-color: forestgreen;
+    border-radius: 4px 4px 0px 0px;
+    font-size: 14px;
+}
+
+.container-logo{
+    width: 350px;
+    height: 100%;
     display: flex;
 }
 .container-title img{
     height: 100%;
     width: 100%;
-    object-fit: contain; 
+    object-fit: contain;
+    background-color: #ffff00
 }
+
 
 /*caja pokedex*/
 .box-pokedex{
-    background-color: rgb(0, 17, 255);
+    background-color:;
     display: flex;
+    position:relative;
+    top: 120px;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content:space-evenly;
     align-items: flex-start;
+    align-content:space-between;
+
 }
 .card{
     background-color:plum;
+    height: 200px;
+    width: 150px;
     margin: 10px;
-    padding: 10px;
+    padding:15px;
      
 }
 .card p{
@@ -61,20 +89,40 @@ body{
 
 /*buscador*/
 .filter{
-    display: block;
-    background-color: red;
-    padding: 40px;
+    background-color:#0b24519f;
+    display: flex;
+    flex-flow: row;
+    justify-content:center;
+    align-items:flex-start;
+    height:60px;
+    width:100%;
+    padding: 13px;
     top: 150px;
-    position: absolute;
-    z-index:1;
+    z-index:100;
+    position:fixed;
+    top: 60px;
+
+   
 }
-.filtrar{
-    display: block;
-    background-color: purple;
-    padding: 40px;
-    top: 270px;
-    position: absolute;
-    z-index:1;
+.filter label{
+    background-color: chartreuse;
+    border: 1px solid fuchsia;
+    font-size:13px;
+    margin: 7px;
+    text-align: center;
+    height: 20px;
+    padding: 1px;
+    
+    
+}
+.filter select{
+    background-color:#ffff00 ;
+    border: 1px solid darkblue;
+    font-size:13px;
+    margin: 7px;
+    text-align: center;
+    height: 20px;
+    padding: 1px;
 }
 /*colores*/
 .colores{
