--- a/src/style.css
+++ b/src/style.css
@@ -35,15 +35,18 @@ header{
     height: 140px;
 }
 
-.ghibli1{
+#ghibli1{
     display: flex;
+    background-image: url("img/ghibli1.png");
+    background-size: 100% 100%;
+    width:290px;
+    height:140px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .barra{
     display: flex;
-    margin: 0px;
     background-color: #49a4e1;
     width: 100%;
     height: 60px;
@@ -52,26 +55,25 @@ header{
 }
 
 .buscar{
+    text-align: center;
     background-color: #49a4e1;
     width: 33%;
-    margin-top: 2px;
-}
-
-.buscador {
-    margin-left: 20px;
-    margin-top: 0px;
-    display: inline-block;
 }
 
 .b-busqueda{
-    margin-left: 2px;
-    margin-top: 2px;
+    width: 150px;
+    height: 20px;
+    background-color: white;
+    border:0px;
+    border-radius: 8px;
+    height: 20px;
+    width: 120px;
 }
 
 .filtro{
+    text-align: center;
     background-color: #49a4e1;
     width: 33%;
-    margin-top: 2px;
 }
 
 select{
@@ -79,15 +81,7 @@ select{
     border-radius: 8px;
     border: 0px;
     height: 20px;
-    width: 120px;
-}
-
-input{
-    background-color: white;
-    border:0px;
-    border-radius: 8px;
-    height: 20px;
-    width: 120px;
+    width: 150px;
 }
 
 .orden{
@@ -117,7 +111,7 @@ section{
     overflow: hidden;
     margin: 1.5%;
     flex: auto;
-    max-height: 400px;
+    max-height: 460px;
     max-width: 200px;
 }
 
@@ -134,23 +128,36 @@ section{
 
 .card-body-text {
     display: flex;
-    height: 100px;
+    height: 160px;
     width: 100%;
     flex-direction: column;
 }
 
 .card-title {
-    font-size: 16px;
+    font-size: 17px;
     margin: 5px;
 }
 
 .card-body-text span {
+    font-size: 14px;
     margin-left: 5px;
 }
 
-a{
+.button-info {
     display: absolute;
-    z-index: 100;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: auto;
+    border-radius: 4px;
+    border: 0px;
+    width: 130px;
+    transition: background-color .1s;
+}
+
+.button:hover {
+    background-color: rgb(204, 204, 204);
 }
 
 /* Borde de la Pagina */
@@ -186,3 +193,48 @@ a{
 #bottom {
     bottom: 0;
 }
+
+@media(max-width: 480px) {
+    #ghibli1 {
+        background-image: url("img/logoghibli.png");
+        background-size: 100% 100%;
+        width:200px;
+        height:70px;
+       }
+    .logo {
+        width:100%;
+        height:70px;
+       }
+
+    .barra{
+        display: flex;
+        margin: auto;
+        background-color: #49a4e1;
+        width: 100%;
+        height: 80px;
+        font-size:1em;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .buscar{
+        background-color: #49a4e1;
+        width: 33%;
+        border-radius: 8px;
+     }
+
+    .b-busqueda{
+        margin-left: 2px;
+        margin-top: 2px;
+        width: 150px;
+        height: 20px;
+    }
+
+     select{
+        background-color: white;
+        border-radius: 8px;
+        border: 0px;
+        height: 20px;
+        width: 150px;
+    }
+    }
