--- a/src/style.css
+++ b/src/style.css
@@ -7,38 +7,36 @@ fondo y barra busqueda = #F7F8F7*/
 body{
     margin: 0px;
     padding: 0px;
-/*     min-height: 100vh;
-    min-width: 100vw; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     flex-wrap: wrap;
-    cursor: url("./img/totorohoja.png"), auto;
+    overflow-x: hidden;
 }
 
 main{
-    padding: 0px;
     width: 100vw;
     height: 100vh;
     display: block;
 }
 
 header{
-    margin-top: 10px;
-    height: 200px;
+    display: flex;
+    flex-direction: column;
+    background-color: #49a4e1;
+    height: 180px;
     width: 100%;
 }
 
 .logo{
+    padding-top: 10px;
     display: flex;
     background-color: #49a4e1;
     width: 100%;
     height: 140px;
 }
 
-#ghibli1{
+img{
     display: flex;
-    background-image: url("img/ghibli1.png");
-    background-size: 100% 100%;
     width:290px;
     height:140px;
     margin-left: auto;
@@ -49,7 +47,7 @@ header{
     display: flex;
     background-color: #49a4e1;
     width: 100%;
-    height: 60px;
+    height: 40px;
     font-size:1.5em;
     vertical-align: middle;
 }
@@ -57,26 +55,29 @@ header{
 .buscar{
     text-align: center;
     background-color: #49a4e1;
-    width: 33%;
+    width: 33.3vw;
+    height: 40px;
 }
 
 .b-busqueda{
+    padding: 0px;
+    text-align: center;
     width: 150px;
     height: 20px;
     background-color: white;
     border:0px;
     border-radius: 8px;
-    height: 20px;
-    width: 120px;
 }
 
 .filtro{
     text-align: center;
     background-color: #49a4e1;
-    width: 33%;
+    width: 33.3vw;
+    height: 40px;
 }
 
 select{
+    text-align: center;
     background-color: white;
     border-radius: 8px;
     border: 0px;
@@ -86,20 +87,17 @@ select{
 
 .orden{
     background-color: #49a4e1;
-    width: 34%;
+    width: 33.3vw;
     margin-top: 2px;
 }
 
 section{
-    padding: 15px;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 10px;
     justify-content: center;
 }
 
 .card {
-    /* padding: 15px 15px 10px; */
     display: flex;
     flex-direction: column;
     background-color: #2F7BAD;
@@ -194,23 +192,112 @@ section{
     bottom: 0;
 }
 
+/*diseño pagina 2*/
+.card-info{
+    padding-left: 200px;
+    padding-right: 200px;;
+    display: flex;
+    color: #000000;
+    position: relative;
+    overflow: hidden;
+    margin: 3%;
+    height: 50%;
+    width: 100vw;
+}
+
+.card-body-img2{
+    display: flex;
+    overflow: hidden;
+    width: 290px;
+    height: 300px;
+}
+
+
+.card-body-text2{
+    text-align: justify;
+    margin-left: 15px;
+    display: flex;
+    height: 160px;
+    width: 100%;
+    flex-direction: column;
+}
+
+.card-people{
+    padding: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    overflow: hidden;
+    margin: 8px;
+    height: 50%;
+}
+
+.c-people{
+
+    display: flex;
+    flex-direction: column;
+    background-color: #2F7BAD;
+    border-style: solid;
+    border-color: #1F5273;
+    border-width: 1px;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    flex: auto;
+    max-height: 350px;
+    max-width: 180px;
+}
+
+.p-people{
+
+        display: flex;
+        width:290px;
+        height:200px;
+}
+
+.card-body-img3{
+    display: flex;
+    overflow: hidden;
+    height: 200px;
+}
+
+.card-body-text3{
+    margin-top: 3px;
+    display: flex;
+    height: 125px;
+    width: 100%;
+    flex-direction: column;
+}
+
+.card-body-text3 span{
+    text-align: left;
+    line-height: 20px;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+/*media pagina 1*/
 @media(max-width: 480px) {
-    #ghibli1 {
-        background-image: url("img/logoghibli.png");
-        background-size: 100% 100%;
+    .source {
+        margin-left: auto;
+        margin-right: auto;
+       }
+
+    img{
         width:200px;
         height:70px;
-       }
+    }   
+       
     .logo {
         width:100%;
-        height:70px;
+        height:80px;
        }
 
     .barra{
         display: flex;
         margin: auto;
         background-color: #49a4e1;
-        width: 100%;
+        width: 100vw;
         height: 80px;
         font-size:1em;
         align-items: center;
@@ -224,13 +311,19 @@ section{
      }
 
     .b-busqueda{
-        margin-left: 2px;
-        margin-top: 2px;
+        text-align: center;
+        padding: 0px;
+        border-radius: 8px;
+        margin-bottom: 1px;
+        margin-left: 0px;
+        margin-top: 0px;
         width: 150px;
         height: 20px;
     }
 
      select{
+        text-align: center;
+        margin-bottom: 1px;
         background-color: white;
         border-radius: 8px;
         border: 0px;
