--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,9 @@ main{
 }
 
 header{
-    margin-top: 10px;
+    margin-top: 0px;
+    padding: 10px;
+    background-color: #49a4e1;
     height: 200px;
     width: 100%;
 }
@@ -35,60 +37,53 @@ header{
     height: 140px;
 }
 
-.ghibli1{
+img{
     display: flex;
+    /*background-image: url("img/ghibli1.png");*/
+    width:290px;
+    height:140px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .barra{
     display: flex;
-    margin: 0px;
     background-color: #49a4e1;
     width: 100%;
-    height: 60px;
+    height: 40px;
     font-size:1.5em;
     vertical-align: middle;
 }
 
 .buscar{
+    text-align: center;
     background-color: #49a4e1;
     width: 33%;
-    margin-top: 2px;
-}
-
-.buscador {
-    margin-left: 20px;
-    margin-top: 0px;
-    display: inline-block;
-    font-size: 20px;
 }
 
 .b-busqueda{
-    margin-left: 2px;
-    margin-top: 2px;
+    text-align: center;
+    width: 150px;
+    height: 20px;
+    background-color: white;
+    border:0px;
+    border-radius: 8px;
+    padding: 0px;
 }
 
 .filtro{
+    text-align: center;
     background-color: #49a4e1;
     width: 33%;
-    margin-top: 2px;
 }
 
 select{
+    text-align: center;
     background-color: white;
     border-radius: 8px;
     border: 0px;
     height: 20px;
     width: 150px;
-}
-
-input{
-    background-color: white;
-    border:0px;
-    border-radius: 8px;
-    height: 20px;
-    width: 120px;
 }
 
 .orden{
@@ -150,20 +145,20 @@ section{
     margin-left: 5px;
 }
 
-.button-info{
+.button-info {
     display: absolute;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10px;
     margin-top: auto;
     border-radius: 4px;
-    border: 0;
+    border: 0px;
     width: 130px;
-    margin-left: auto;
-    margin-right: auto;
     transition: background-color .1s;
 }
 
-.button-info:hover {
+.button:hover {
     background-color: rgb(204, 204, 204);
 }
 
@@ -200,3 +195,53 @@ section{
 #bottom {
     bottom: 0;
 }
+
+@media(max-width: 480px) {
+    .source {
+        margin-left: auto;
+        margin-right: auto;
+       }
+    img {
+        width: 200px;
+        height: 70px;
+    }
+    .logo {
+        width:100%;
+        height:80px;
+       }
+
+    .barra{
+        display: flex;
+        margin: auto;
+        background-color: #49a4e1;
+        width: 100%;
+        height: 80px;
+        font-size:1em;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .buscar{
+        background-color: #49a4e1;
+        width: 33%;
+        border-radius: 8px;
+     }
+
+    .b-busqueda{
+        padding: 0px;
+        text-align: center;
+        margin-left: 0px;
+        margin-top: 0px;
+        width: 150px;
+        height: 20px;
+    }
+
+     select{
+        text-align: center;
+        background-color: white;
+        border-radius: 8px;
+        border: 0px;
+        height: 20px;
+        width: 150px;
+    }
+    }
