--- a/src/style.css
+++ b/src/style.css
@@ -1,64 +1,76 @@
 *{
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+    box-sizing: border-box;   
+
 }
 body{
-    background-color: #271d45; 
+    background-color: #c0b4df; 
 }
 
+.colores{
+    color: #1d1533;
+    color: #ffff00;
+    color: #271d45;     
+    color: #c0b4df;
+}
 /*Titulo Logo*/
 .container-title{ 
     background-color:#45337b;
     display: flex;
-    height: 40px;
+    height: 65px;
     width: 100%;
-    position:fixed;
+    /* position:fixed;
     top: 0px;
-    z-index: 1000;
+    z-index: 1000; */
     flex-flow: row wrap;
     justify-content:space-between;
 
 }
 .container-title nav{
-    width: 400px;
-    height: 40px;
-    background-color: aqua;
+    width: 60%;
+    height: 100%;
+    padding: 10px 0px 0px;
 }
+
 .nav-list{
+    width: 100%;
+    height: 100%;
     list-style: none;
     display:flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
-    
 }
+
 .nav-list li{
-    margin: 8px; 
-    padding: 8px;
-    background-color: forestgreen;
-    border-radius: 4px 4px 0px 0px;
-    font-size: 14px;
+  
+    color: #c0b4df;
+    padding:  10px 6.9%;
+    border-radius: 5px 5px 0px 0px;
+    font-size: 20px;
+
+}
+.nav-list li:hover{
+    color: #fff;
+    background-color: #1d1533;
 }
 
 .container-logo{
-    width: 350px;
     height: 100%;
-    display: flex;
+    width: 40%;
 }
 .container-title img{
     height: 100%;
     width: 100%;
     object-fit: contain;
-    background-color: #ffff00
 }
+
 
 
 /*caja pokedex*/
 .box-pokedex{
-    background-color:;
     display: flex;
-    position:relative;
-    top: 120px;
+    /* position:relative;
+    top: 120px; */
     flex-flow: row wrap;
     justify-content:space-evenly;
     align-items: flex-start;
@@ -97,10 +109,10 @@ body{
     height:60px;
     width:100%;
     padding: 13px;
-    top: 150px;
+    /* top: 150px;
     z-index:100;
-    position:fixed;
-    top: 60px;
+    position:fixed; */
+    top: 100px;
 
    
 }
