--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,9 @@
     font-family: 'Varela Round', sans-serif !important; 
 }
 body{
-    background-color: #c0b4df; 
+    background-color: #c0b4df;
+    position: absolute;
+    width: 100%;    
 }
 
 .colores{
@@ -80,6 +82,7 @@ body{
     display: flex;
     /* position:static;
     top: 120px; */
+    height: 100vh;
     flex-flow: row wrap;
     justify-content:space-evenly;
     align-items: flex-start;
@@ -150,8 +153,7 @@ body{
 /*footer*/
 
 .cotainer-footer{
-    bottom: 0px;
-    position: static;
+    position: relative;
     background-color: #45337b;
     width: 100%; 
     display: flex;
@@ -162,8 +164,6 @@ body{
     border-color: red;
     border-style: solid;
     border-width: 5px 0px 0px;
-    
-
 }
 .logo-footer{
     flex: 28%;
