--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,19 @@
 body{
-    background-color: rgb(225, 237, 237);
+    background-color: rgba(197, 249, 249, 0.914);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
-    
-   	
-    
+    background-size: contain; 
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.232), rgba(0, 0, 0, 0.232)),url(https://wallpaperset.com/w/full/a/e/f/40134.jpg);
+
 }
+
 figure{ 
-    font-size: 150px;
+    font-size: 200px;
     justify-content: center;
     margin: 10px;
+    padding: 20px;
+    width: 100%;
+   
 }
 #seccionUno{
     display: grid;
@@ -27,12 +31,21 @@ figure{
 article {
     border: 4px solid rgba(1, 10, 18, 0.901);
     border-radius: 20px;
-    background-color: rgba(124, 222, 246, 0.647);
+    background-color: rgba(235, 229, 234, 0.962);
     text-align: center;
     margin: 10px;
     color: black;
     font-size: 50px;
+   image-orientation: center;
     }
+p {
+        text-align: justify;
+        display: block;
+        margin-block-start: -1em;
+        margin-block-end: 8em;
+        margin-inline-start: 45px;
+        margin-inline-end: 45px;
+}
 input{
     color: black;
     font-size: 40px;   
@@ -40,13 +53,21 @@ input{
 button {
     color: black;
     font-size: 40px;
-
 }
-section {
-   
-    color: black;
-    font-size: 50px;
+select {
     
+    color: black;
+    font-size: 40px;    
+     
+}
+section { 
+    display: grid;
+    color: black;
+    font-size: 37px;
+    justify-content: center;
+    background-color: rgba(162, 230, 247, 0.803);
+    border: 2px solid black;size: 20px
+   
 }
     
 footer{ 
@@ -54,7 +75,6 @@ footer{
     color: black;
     font-size: 40px;
     justify-content: center;
-    background-color: rgba(14, 195, 241, 0.789);
+    background-color: rgba(162, 230, 247, 0.803);
     border: 1px solid black;
-
 }
