--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,9 @@
 body{
     background-color: #c0b4df;
     position: absolute;
-    width: 100%;    
+    width: 100%;  
+    display: flex; 
+    flex-flow: column wrap;
 }
 
 .colores{
@@ -80,13 +82,13 @@ body{
 .box-pokedex{
     background-color: #ffff00;
     display: flex;
-    /* position:static;
-    top: 120px; */
-    height: 100vh;
     flex-flow: row wrap;
     justify-content:space-evenly;
     align-items: flex-start;
     align-content:space-between;
+    /* position:static;
+    top: 120px; */
+    min-height: calc(100vh - 430px);
 
 }
 .card{
@@ -120,13 +122,14 @@ body{
     flex-flow: row;
     justify-content:center;
     align-items:flex-start;
-    height:60px;
+    height:50%;
     width:100%;
     padding: 13px;
     /* top: 150px;
     z-index:100;
-    position:fixed; */
-    top: 100px;
+    position:fixed;
+    top: 100px; */
+
 
    
 }
@@ -150,17 +153,18 @@ body{
     height: 20px;
     padding: 1px;
 }
-/*footer*/
 
+/*footer*/
 .cotainer-footer{
     position: relative;
     background-color: #45337b;
-    width: 100%; 
+    width: 100%;
+    max-width: 100vw;    
+    min-height: calc(100vh - 430px);
     display: flex;
     flex-flow: wrap row;
     justify-content: space-evenly;
     align-items: center;
-    height: 200px;
     border-color: red;
     border-style: solid;
     border-width: 5px 0px 0px;
