Se agregaron las secciones 4 y 5 del readme

--- a/src/style.css
+++ b/src/style.css
@@ -199,7 +199,7 @@ section{
 }
 
 /*diseño pagina 2*/
-.buttons-up {
+.buttons-up{
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -216,15 +216,61 @@ section{
     display: flex;
     padding-top: 10px;
     margin-left: 30px;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
 }
 
 .estadistic{
     margin-top: 10px;
-    height: 40px;
-    width: 70px;
-    margin-right: 40px;
+    height: 60px;
+    width: 60px;
+    margin-right: 50px;
+    border-radius: 50%;
+    background-color: black;
+    color: #fff;
+    font-weight:600;
+    text-align-last: center;
+    border-style: solid;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 200px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0, 0.8);
+
+}
+.modal-content{
+    border-radius: 20px;
+    position: relative;
+    background-color: #49a4e1;
+
+    margin: auto;
+    padding: 20px;
+    width: 60%;
+}
+
+.people-info{
+    color: #fff;
+}
+
+.close{
+    color: rgb(0, 0, 0);
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .card-info{
@@ -267,7 +313,6 @@ section{
     overflow: hidden;
     margin: 8px;
     height: 45%;
-
 }
 
 .c-people{
@@ -501,54 +546,3 @@ section{
         margin-right: 7px;
     }
 }
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1; 
-    padding-top: 200px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.8);
-
-}
-
-.modal-content {
-    border-radius: 20px;
-    position: relative;
-    background-color: #49a4e1;
-    margin: auto;
-    padding: 20px;
-    width: 60%;
-    -webkit-animation-name:animarsuperior;
-    -webkit-animation-duration: 0.5s;
-    animation-name: animarsuperior;
-    animation-duration: 0.5s;
-}
-.people
-
-/* Add Animation */
-/* @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
-  }
-  @keyframes animarsuperior {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-  } */
-
-  .close {
-    color: black;
-    float: right;
-    font-size: 30px;
-    font-weight: bold;
-  }
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
